# speljongen

./: SpelJongEmu.sln  readme.md
SpelJongEmu/: CMakeLists.txt  SpelJongEmu.vcxproj  SpelJongEmu.vcxproj.filters
SpelJongEmu/assets/test roms/: adjustris.txt  readme.txt
SpelJongEmu/src/: AddressSpace.hpp  AluFunctions.cpp  AluFunctions.hpp  Apu.cpp  Apu.hpp  Argument.cpp  Argument.hpp  AudioChannel.cpp  AudioChannel.hpp  AudioChannelFour.cpp  AudioChannelFour.hpp  AudioChannelOne.cpp  AudioChannelOne.hpp  AudioChannelThree.cpp  AudioChannelThree.hpp  AudioChannelTwo.cpp  AudioChannelTwo.hpp  AudioEnvelope.cpp  AudioEnvelope.hpp  AudioOutput.cpp  AudioOutput.hpp  AudioSweep.cpp  AudioSweep.hpp  BatterySaves.hpp  BitUtil.hpp  BootRom.hpp  CMakeLists.txt  Cartridge.cpp  Cartridge.hpp  ClassicPixelFifo.cpp  ClassicPixelFifo.hpp  ColourPalette.cpp  ColourPalette.hpp  ColourPixelFifo.cpp  ColourPixelFifo.hpp  ColourRam.hpp  ColourRegisters.hpp  Consts.hpp  Controller.cpp  Controller.hpp  (+68 more)
SpelJongEmu/src/imgui/: imconfig.h  imgui-SFML.cpp  imgui_demo.cpp  imgui_memory_editor.h
spel-osgc/: spel-osgc.vcxproj  spel-osgc.vcxproj.filters
spel-osgc/src/: MenuState.cpp  MenuState.hpp
